--- a/router/src/Com.css
+++ b/router/src/Com.css
@@ -8,3 +8,29 @@ h1
     color: black;
     text-decoration: none;
 }
+.box
+{
+    width: 500px;
+    background-color: rgb(170, 146, 170);
+    margin: auto;
+    padding-top: 30px;
+    margin-top: 50px;
+}
+input
+{
+    width: 50%;
+    padding: 20px;
+    margin-top: 20px;
+    border-radius: 20px;
+    border: none;
+}
+.button
+{
+    width: 120px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+h4
+{
+    font-size: 50px;
+}
